@@ -83,75 +83,30 @@
   #end      
 #end
 
-#macro(display_facet_date $field, $display, $fieldName, $gap)
-  <span class="facet-field">$display</span>
-    <ul>
-    #foreach ($facet in $field)
-      #set($theDate = $date.toDate("yyyy-MM-dd'T'HH:mm:ss'Z'", $facet.key))
-      #set($value = '["' + $facet.key + '" TO "' + $facet.key + $gap + '"}')
-
-      #set($facetURL = "#url_for_facet_date_filter($fieldName, $value)")
-      #if ($facetURL != '')
-        #if ($facet.key != "gap" && $facet.key != "start" && $facet.key != "end" && $facet.key != "before" && $facet.key != "after")
-
-          <li><a href="$facetURL">$date.format('MMM yyyy', $theDate) $gap</a> ($facet.value)</li>
-        #end
-        #if ($facet.key == "before" && $facet.value > 0)
-          <li><a href="$facetURL">Before</a> ($facet.value)</li>
-        #end
-        #if ($facet.key == "after" && $facet.value > 0)
-          <li><a href="$facetURL">After</a> ($facet.value)</li>
-        #end
-      #end
-    #end
-    </ul>
-#end
-        
-
 
 #macro(display_facet_range $field, $display, $fieldName, $start, $end, $gap, $before, $after)
   <span class="facet-field">$display</span>
     <ul>
     #if($before && $before != "")
-      #set($value = "[* TO " + $start + "}")
+      #set($value = "[* TO " + "#format_value($start)" + "}")
       #set($facetURL = "#url_for_facet_range_filter($fieldName, $value)")
-      <li><a href="$facetURL">Less than $start</a> ($before)</li>
+      <li><a href="$facetURL">Less than #format_value($start)</a> ($before)</li>
     #end
     #foreach ($facet in $field)
-      #set($rangeEnd = $math.add($facet.key, $gap))
+      #set($rangeEnd = "#range_get_to_value($facet.key, $gap)")
       #set($value = "[" + $facet.key + " TO " + $rangeEnd + "}")
       #set($facetURL = "#url_for_facet_range_filter($fieldName, $value)")
       #if ($facetURL != '')
-        <li><a href="$facetURL">$facet.key - $rangeEnd</a> ($facet.value)</li>
+        <li><a href="$facetURL">$facet.key - #format_value($rangeEnd)</a> ($facet.value)</li>
       #end
     #end
     #if($end && $end != "" && $after > 0)
-      #set($value = "[" + $end + " TO *}")
+      #set($value = "[" + "#format_value($end)" + " TO *}")
       #set($facetURL = "#url_for_facet_range_filter($fieldName, $value)")
-      <li><a href="$facetURL">More than $math.toNumber($end)</a> ($after)</li>
+      <li><a href="$facetURL">More than #format_value($end)</a> ($after)</li>
     #end
     </ul>
 #end
-
-##   <lst name="facet_pivot">
-##     <arr name="cat,inStock">
-##       <lst>
-##         <str name="field">cat</str>
-##         <str name="value">electronics</str>
-##         <int name="count">17</int>
-##         <arr name="pivot">
-##           <lst>
-##             <str name="field">inStock</str>
-##             <str name="value">true</str>
-##             <int name="count">13</int>
-##           </lst>
-##           <lst>
-##           <str name="field">inStock</str>
-##             <str name="value">false</str>
-##             <int name="count">4</int>
-##           </lst>
-##         </arr>
-##       </lst>
 
 ## $pivots is a list of facet_pivot
 #macro(display_facet_pivot $pivots, $display)
@@ -182,6 +137,24 @@
   #end
 #end  
 
-#macro(capitalize $name)
-  ${name.substring(0,1).toUpperCase()}${name.substring(1)}
+#macro(utc_date $theDate)
+$date.format("yyyy-MM-dd'T'HH:mm:ss'Z'",$theDate,$date.getLocale(),$date.getTimeZone().getTimeZone("UTC"))##
+#end
+
+#macro(format_value $val)
+#if(${val.class.name} == "java.util.Date")
+#utc_date($val)##
+#else
+$val##
+#end
+#end
+
+#macro(range_get_to_value $inval, $gapval)
+#if(${gapval.class.name} == "java.lang.String")
+$inval$gapval##
+#elseif(${gapval.class.name} == "java.lang.Float" || ${inval.class.name} == "java.lang.Float")
+$math.toDouble($math.add($inval,$gapval))##
+#else
+$math.add($inval,$gapval)##
+#end
 #end
