@@ -1,7 +1,7 @@
 <h2 #annTitle("Facets generated by adding &facet.range= to the request")>Range Facets</h2>
 #foreach ($field in $response.response.facet_counts.facet_ranges)
 	#set($name = $field.key)
-	#set($display = "#capitalize($name)")
+	#set($display = $name)
 	#set($f = $field.value.counts)
 	#set($start = $field.value.start)
 	#set($end = $field.value.end)
